tests/lean/missing_import.lean
import does.not.exist data.bitvec

#print bitvec
